# picostation-xmb

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  build.sh  comport.txt  deploy.bat  isoconfig.xml  make-xiso.bat  makeimage.bat  makeimage.sh  picostation-menu.code-workspace  picostation-menu.cue  setup-python-venv.bat  setup-python-venv.sh
assets/: click.vag  slide.vag
assets/xiso/: isoconfig.xml
ps1-bare-metal/ps1/: cop0.h  registers.h
src/: cdrom.c  controller.c  controller.h  file_manager.c  file_manager.h  filesystem.c  gpu.c  gpu.h  hwregs.h  logging.h  main.c  modplayer.c  sort.c  sort.h  spu.h  system.h
src/includes/: bsp.c  bsp.h  cdrom.c  cdrom.h  controller.c  filesystem.c  filesystem.h  fixedPoint.h  irq.c  irq.h  rama.c  spu.h  stream.c  system.c  system.h
src/psxproject/: cdrom.c  cdrom.h  controller.h  delay.c  delay.h  filesystem.c  filesystem.h  irq.c  rama.c  spu.c  stream.h  system.c  system.h  system.s  unhandledexc.c
src/xmb/: xmb.c  xmb.h
tools/: convert_background.py
